--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
     "bootstrap": "^4.1.3",
+    "crypto-js": "^4.0.0",
     "ipfs-api": "^26.1.2",
     "next": "^10.0.7",
     "react": "^16.5.2",
